# Aircraft-Simu

./: CMakeLists.txt  README.md
.codex/skills/missile-sim-development/: SKILL.md
.codex/skills/missile-sim-development/agents/: openai.yaml
common/: CMakeLists.txt
common/include/common/: build_info.h  config.h  crc32.h  diag.h  logger.h  math_constants.h  matrix3.h  packet.h  protocol.h  quaternion.h  random.h  ring_buffer.h  sim_time.h  status.h  vec3.h
common/src/: config.c  crc32.c  logger.c  matrix3.c  packet.c  protocol.c  quaternion.c  random.c  ring_buffer.c  sim_time.c  status.c  vec3.c
common/tests/: common_tests.c
configs/baseline/: faults.json  flight_control.json  runtime.json  scenario.json
docs/: design.md  implementation_plan.md  project_framework.md
environment_sim/: CMakeLists.txt
environment_sim/include/env/: actuator_model.h  aero_model.h  atmosphere_model.h  earth_model.h  env_app.h  env_config.h  env_context.h  environment_force_model.h  fault_injection.h  geo_coordinate.h  gravity_model.h  hit_detect.h  map_tile.h  mass_model.h  missile_plant_6dof.h  propulsion_model.h  recorder.h  scenario.h  sensor_accel.h  sensor_imu.h  sensor_noise.h  sensor_seeker.h  sensor_speed.h  sensor_vector3.h  target_model.h  terrain_model.h  world_state.h
environment_sim/src/: actuator_model.c  aero_model.c  atmosphere_model.c  earth_model.c  env_app.c  environment_force_model.c  fault_injection.c  geo_coordinate.c  gravity_model.c  main.c  map_tile.c  mass_model.c  missile_plant_6dof.c  propulsion_model.c  sensor_accel.c  sensor_imu.c  sensor_noise.c  sensor_seeker.c  sensor_speed.c  sensor_vector3.c  terrain_model.c
environment_sim/tests/: environment_tests.c
flight_control_sim/: CMakeLists.txt
flight_control_sim/include/fc/: autopilot.h  command_manager.h  estimator.h  fc_app.h  fc_config.h  fc_context.h  fc_health.h  fc_interface.h  fc_modes.h  fc_scheduler.h  fc_state.h  guidance_manager.h  guidance_png.h  navigation.h  safety_monitor.h
flight_control_sim/src/: autopilot.c  command_manager.c  estimator.c  fc_app.c  fc_health.c  fc_modes.c  fc_scheduler.c  fc_state.c  guidance_manager.c  guidance_png.c  main.c  navigation.c  safety_monitor.c
flight_control_sim/tests/: fc_tests.c
scripts/: earth_plot.py  plot.py  ploty_plot.py
tests/: CMakeLists.txt  closed_loop_test.c  instance_manager_test.c
tools/instance_manager/: CMakeLists.txt
tools/instance_manager/src/: main.c
